--- a/website/app/public/css/style.styl
+++ b/website/app/public/css/style.styl
@@ -12,12 +12,23 @@ body
 	background -moz-radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%, rgba(214,240,253,1) 100%) /* FF3.6+ */
 	background -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(242,249,254,1)), color-stop(100%,rgba(214,240,253,1))) /* Chrome,Safari4+ */
 	background -webkit-radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%,rgba(214,240,253,1) 100%) /* Chrome10+,Safari5.1+ */
-	background -o-radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%,rgba(214,240,253,1) 100%) /* Opera 12+ */
+	background -o-radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 100%,rgba(214,240,253,1) 100%) /* Opera 12+ */
 	background -ms-radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%,rgba(214,240,253,1) 100%) /* IE10+ */
 	background radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%,rgba(214,240,253,1) 100%) /* W3C */
 	
-// login form //
-    
+// login form 
+li{
+	float left
+}
+a{
+	line-height 30px
+	display block
+	font-weight bold
+	text-align center
+}
+a:hover{
+	background-color #7A991A
+}
 #login-container{
 	width 340px
 	margin 160px auto	
@@ -49,15 +60,39 @@ body
 
 #entry-form-container{
 	width 610px
-	margin 10px auto
+	margin 10px auto auto
+
 	label{
 		margin 15px 0 5px 5px
 	}
 	button{
-		width 150px
-		padding 6px 40px 6px 40px
+		width 120px
+		padding 6px 10px 6px 10px
 		float right
-		margin-top 15px
+		margin-top 10px
+	}
+	#entries{
+		p{
+			word-wrap break-word
+			width 610px
+		}
+		button{
+			width 15px
+			padding 0 0 0 0
+			margin-top 0px
+		}
+	}
+	#entry_date-tf{
+		width 80px
+	}
+	#entry_time-tf{
+		width 80px
+	}
+	#entry_title-tf{
+		width 400px
+		float right
+		text-align right
+		font-weight bold
 	}
 }
 
