--- a/website/app/server/views/print.jade
+++ b/website/app/server/views/print.jade
@@ -6,11 +6,11 @@ div.container(style='margin:20px')
 				th(style='width:40px') #
 				th(style='width:180px') Name
 				th(style='width:180px') Username
-				th(style='width:180px') Account Created
+				th(style='width:230px') Account Created
 		tbody
 		- for (var i = 0; i < accts.length; i++)
 			tr
 				td= i+1
 				td= accts[i].email
 				td= accts[i].pen_name
-				td= accts[i].date_joined
+				td= accts[i].time_joined
