Started data/month categorization of entries

--- a/website/app/server/views/entry.jade
+++ b/website/app/server/views/entry.jade
@@ -24,8 +24,8 @@ div
             | Post
         div.clear-fix
 
-    div.body#entries.well.span8
-        h1
+    div.body#entries
+
 
 script(src='/vendor/jquery.min.js')
 script(src='/vendor/jquery.form.js')
