added non-working logout post

--- a/app/server/views/entry.jade
+++ b/app/server/views/entry.jade
@@ -9,7 +9,7 @@ div
                 li <a href="/html/">HTML</a>
                 li <a href="/css/">CSS</a>
                 li <a href="/js/">JavaScript</a>
-                li <a href="/jquery/">Logout</a>
+                li <a href="/logout/">Logout</a>
 
 #entry-form-container
     div.body.well.span8
