--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -29,9 +29,30 @@ a{
 a:hover{
 	background-color #7A991A
 }
+#navbar{
+	img{
+		width 10%
+	}
+}
+#greeting-container{
+	width 1000px
+	margin 120px auto auto auto
+	#image{
+		width 250px
+		margin 20px 120px 20px 120px
+		float left
+		h3{
+			text-align center
+		}
+		p{
+			margin-top 40px
+		}
+	}
+
+}
 #login-container{
+	float left
 	width 340px
-	margin 160px auto	
 	label{
 		margin 15px 0 5px 5px
 	}
