--- a/app/server/views/login.jade
+++ b/app/server/views/login.jade
@@ -1,22 +1,27 @@
-
-#login-container
-    form( method="post")#login-form.well.span4
-        h1= title
-        p.subheading Please Login To Your Account
-        label Email 
-        input(type="text", name="email", id='user-tf').span4.required
-        label Password
-        input(type="password", name="pass", id='pass-tf').span4.required
-        button(type="submit")#btn-login.btn.btn-primary
-            i.icon-lock.icon-white
-            | Sign in
-        label#remember-me.checkbox Remember Me
-            input(type="checkbox", checked='checked')
-        div.clear-fix
-        hr
-        div.btm-links
-            a(href='#')#forgot-password Forgot Your Password? 
-            a(href='/signup')#create-account Create An Account
+include navbar
+div#greeting-container
+    div#image
+        img(src="/img/mhatan_black.png")
+        h3 read.write.share.
+        p.well Mhatan is still in beta. Please report bugs and suggestions to htetn@lafayette.edu. Thank you.
+    #login-container
+        form( method="post")#login-form.well.span4
+            h1= title
+            p.subheading Please Login To Your Account
+            label Email 
+            input(type="text", name="email", id='user-tf').span4.required
+            label Password
+            input(type="password", name="pass", id='pass-tf').span4.required
+            button(type="submit")#btn-login.btn.btn-primary
+                i.icon-lock.icon-white
+                | Sign in
+            label#remember-me.checkbox Remember Me
+                input(type="checkbox", checked='checked')
+            div.clear-fix
+            hr
+            div.btm-links
+                a(href='#')#forgot-password Forgot Your Password? 
+                a(href='/signup')#create-account Create An Account
     
 include modals/alert
 include modals/lost-password
