Made a few changes to html and port

--- a/app/server/views/navbar.jade
+++ b/app/server/views/navbar.jade
@@ -1,7 +1,7 @@
 div
     div#navbar.navbar-static-top.navbar.navbar-inner
         nav
-            ul.pull-right.nav
+            ul.nav
                 li <a href="/html/">HTML</a>
                 li <a href="/css/">CSS</a>
                 li <a href="/js/">JavaScript</a>
