--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -2,19 +2,6 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background: #f2f9fe;
-  background: -moz-radial-gradient(center, ellipse cover, #f2f9fe 0%, #d6f0fd 100%);
-/* FF3.6+ */
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #f2f9fe), color-stop(100%, #d6f0fd));
-/* Chrome,Safari4+ */
-  background: -webkit-radial-gradient(center, ellipse cover, #f2f9fe 0%, #d6f0fd 100%);
-/* Chrome10+,Safari5.1+ */
-  background: -o-radial-gradient(center, ellipse cover, #f2f9fe 100%, #d6f0fd 100%);
-/* Opera 12+ */
-  background: -ms-radial-gradient(center, ellipse cover, #f2f9fe 0%, #d6f0fd 100%);
-/* IE10+ */
-  background: radial-gradient(center, ellipse cover, #f2f9fe 0%, #d6f0fd 100%);
-/* W3C */
 }
 li {
   float: left;
@@ -28,8 +15,15 @@ a {
 a:hover {
   background-color: #7a991a;
 }
+#navbar {
+  min-width: 500px;
+}
+#navbar ul {
+  float: right;
+}
 #navbar img {
-  width: 10%;
+  width: 100px;
+  float: left;
 }
 #greeting-container {
   width: 1000px;
