--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -8,7 +8,7 @@ body
 	margin  0
 	padding  0
 	height  100%
-	
+
 // login form 
 li{
 	float left
@@ -21,6 +21,13 @@ a{
 }
 a:hover{
 	background-color #7A991A
+}
+#radio_btns{
+	font-weight small
+	padding-top 20px
+	input{
+		margin-left 8px
+	}
 }
 #navbar{
 	min-width 500px
@@ -102,15 +109,24 @@ a:hover{
 		}
 	}
 	#entry_date-tf{
-		width 80px
+		width 120px
+		text-align center
 	}
 	#entry_time-tf{
 		width 80px
 	}
+	#entry_month-tf{
+		text-align center
+		width 50px
+	}
+	#entry_year-tf{
+		text-align center
+		width 70px
+	}
 	#entry_title-tf{
-		width 400px
+		width 350px
 		float right
-		text-align right
+		text-align left
 		font-weight bold
 	}
 }
