--- a/app/server/views/navbar.jade
+++ b/app/server/views/navbar.jade
@@ -2,8 +2,6 @@ div
     div#navbar.navbar-static-top.navbar.navbar-inner
         nav
             ul.nav
-                li <a href="/html/">HTML</a>
-                li <a href="/css/">CSS</a>
-                li <a href="/js/">JavaScript</a>
+                li <a href="/about/">About</a>
                 li <a href="/logout/">Logout</a>
             img(src="/img/mhatan_white.png").pull-left
