added Diaries button to navbar and made /diary redirect when not logged in

--- a/app/server/views/navbar.jade
+++ b/app/server/views/navbar.jade
@@ -3,5 +3,6 @@ div
         nav
             ul.nav
                 li <a href="/about/">About</a>
+                li <a href="/diary/">Diaries</a>
                 li <a href="/logout/">Logout</a>
             img(src="/img/mhatan_white.png").pull-left
