added navbar to print and diary, made logo link to home for all pages

--- a/app/server/views/navbar.jade
+++ b/app/server/views/navbar.jade
@@ -5,4 +5,5 @@ div
                 li <a href="/about/">About</a>
                 li <a href="/diary/">Diaries</a>
                 li <a href="/logout/">Logout</a>
-            img(src="/img/mhatan_white.png").pull-left
+            a(href="/home/")
+                img(src="/img/mhatan_white.png").pull-left
