--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -131,6 +131,31 @@ a:hover{
 	}
 }
 
+#diary-form-container{
+	width 610px
+	margin 10px auto auto
+
+	label{
+		margin 15px 0 5px 5px
+	}
+	button{
+		width 120px
+		padding 6px 10px 6px 10px
+		float right
+		margin-top 10px
+	}
+	#diaries{
+		p{
+			word-wrap break-word
+			width 610px
+		}
+		button{
+			width 15px
+			padding 0 0 0 0
+			margin-top 0px
+		}
+	}
+}
 
 // account form on signup & home page //
 
