--- a/app/server/views/entry.jade
+++ b/app/server/views/entry.jade
@@ -16,6 +16,9 @@ include navbar
         button()#btn-post.btn.btn-primary
             i.icon-pencil.icon-white
             | Post
+        button#btn-pic.btn
+            i.icon-picture
+            | Add Pictures        
         div#radio_btns
             | Entry Type:
             input(type="radio",name="entry_type",value="T",checked)
@@ -31,10 +34,11 @@ include navbar
 
     div.body#entries
 
-
+include modals/add-pictures
 script(src='/vendor/jquery.min.js')
 script(src='/vendor/jquery.form.js')
 script(src='/vendor/bootstrap-modal.js')
 script(src='/vendor/bootstrap-transition.js')
 script(src='/js/controllers/entryController.js')
+script(src='/js/controllers/picController.js')
 script(src='/js/views/entry.js')
