Deleting entries should be smoother now

--- a/app/server/views/entry.jade
+++ b/app/server/views/entry.jade
@@ -33,7 +33,7 @@ include navbar
 
         div.clear-fix
     div#entriesmode.tabbable
-        ul.nav.nav-tabs
+        ul#tabs.nav.nav-tabs
             li.active
                 a(href="#tab1",data-toggle="tab")
                     | Daily Entries
