--- a/app/server/views/navbar.jade
+++ b/app/server/views/navbar.jade
@@ -2,6 +2,7 @@ div
     div#navbar.navbar-static-top.navbar.navbar-inner
         nav
             ul.nav
+                li <a href="/home/">Entries</a>
                 li <a href="/about/">About</a>
                 li <a href="/diary/">Diaries</a>
                 li <a href="/logout/">Logout</a>
