--- a/app/public/css/temp.styl
+++ b/app/public/css/temp.styl
@@ -5,22 +5,24 @@ raiseText()
 	text-shadow: -1px 1px 0 white
 	-moz-text-shadow: -1px 1px 0 white
 	-webkit-text-shadow: -1px 1px 0 white
+
 body 
 	margin  0
 	padding  0
 	height  100%
-	background -moz-linear-gradient(top, #1e5799 0%,#a5c9e5 100%)
-	background -webkit-linear-gradient(top, #1e5799 0%,#a5c9e5 100%)
-	background -webkit-linear-gradient(top, #1e5799 0%,#a5c9e5 100%)
-	background -o-linear-gradient(top, #1e5799 0%,#a5c9e5 100%)
-	background -ms-linear-gradient(top, #1e5799 0%,#a5c9e5 100%)
-	background linear-gradient(top, #1e5799 0%,#a5c9e5 100%)
+
 // login form 
+li{
+	float left
+}
 a{
 	line-height 30px
 	display block
 	font-weight bold
 	text-align center
+}
+a:hover{
+	background-color #7A991A
 }
 #radio_btns{
 	font-weight small
@@ -31,31 +33,23 @@ a{
 }
 #navbar{
 	min-width 500px
-	h2{	
-		float left
-		height 10px
-		padding 1px 10px
-	}
+
 	ul{
 		float right
 	}
 	img{
 		margin-top 5px
-		height 40px
+		width 100px
 		float left
 	}
 }
 
 #greeting-container{
-	background url(/img/book.png)
-	background-repeat no-repeat
-	background-size 930px auto
 	width 1000px
-	height 620px
-	margin 20px auto auto auto
+	margin 120px auto auto auto
 	#image{
 		width 250px
-		margin 100px 120px 20px 120px
+		margin 20px 120px 20px 120px
 		float left
 		h3{
 			text-align center
@@ -67,15 +61,8 @@ a{
 
 }
 #login-container{
-	margin-top 80px
-	margin-left 30px
 	float left
 	width 340px
-	h1{
-		color rgb(19,54,141)
-		height 70px
-		padding 20px 20px 0 0
-	}
 	label{
 		margin 15px 0 5px 5px
 	}
@@ -93,7 +80,8 @@ a{
 		margin-top 10px
 	}
 	#create-account{
-		float:left
+		float:right
+		margin-right:13px
 	}	
 	#forgot-password{
 		float:left
@@ -116,7 +104,6 @@ a{
 		margin-left 10px
 	}
 	#entries_day,#entries_month,#entries_year{
-		background-color #ffffff
 		h2{
 			text-align center
 		}
@@ -133,6 +120,9 @@ a{
 			padding 0 0 0 0
 			margin-top 0px
 		}
+	}
+	#entriesmode{
+		width 660px
 	}
 	#entry_date-tf{
 		width 120px
