--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -1,16 +1,9 @@
 !!!
 html
 	head
-		title= title
-		link(rel='stylesheet', href='/vendor/bootstrap.min.css')
+		title= 'Mhatan - Your Diary and Journal Online'
+		link(rel='stylesheet', href='/vendor/bootstrap.css')
+		link(rel='stylesheet', href='/vendor/bootstrap.responsive.min.css')
+		link(rel='stylesheet', href='/vendor/bootstrap.responsive.css')
 		link(rel='stylesheet', href='/css/style.css')
-		script(type='text/javascript')
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-36792047-1']);
-			_gaq.push(['_trackPageview']);
-			(function() {
-				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
 	body!= body
