--- a/app/server/views/navbar.jade
+++ b/app/server/views/navbar.jade
@@ -1,10 +1,11 @@
-div
-    div#navbar.navbar-static-top.navbar.navbar-inner
+div.navbar.navbar-inverse
+    div#navbar.navbar-static-top.navbar-inner
         nav
             ul.nav
                 li <a href="/home/">Entries</a>
                 li <a href="/about/">About</a>
                 li <a href="/diary/">Diaries</a>
                 li <a href="/logout/">Logout</a>
-            a(href="/home/")
-                img(src="/img/mhatan_white.png").pull-left
+            a(href="/")
+                img(src="/img/book_black.png").pull_left
+            h2 Mhatan.com
