favicon and compress

--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -2,6 +2,7 @@
 html
 	head
 		title= 'Mhatan - Your Diary and Journal Online'
+		link(rel='icon', type='image/png', href="/img/book_black.png")
 		link(rel='stylesheet', href='/vendor/bootstrap.css')
 		link(rel='stylesheet', href='/vendor/bootstrap.responsive.min.css')
 		link(rel='stylesheet', href='/vendor/bootstrap.responsive.css')
