--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -1,10 +1,11 @@
-!!!
+!!! 5
 html
-	head
-		title= 'Mhatan - Your Diary and Journal Online'
-		link(rel='icon', type='image/png', href="/img/book_black.png")
-		link(rel='stylesheet', href='/vendor/bootstrap.css')
-		link(rel='stylesheet', href='/vendor/bootstrap.responsive.min.css')
-		link(rel='stylesheet', href='/vendor/bootstrap.responsive.css')
-		link(rel='stylesheet', href='/css/style.css')
-	body!= body
+    head
+        title= 'Mhatan - Your Diary and Journal Online'
+        link(rel='icon', type='image/png', href="/img/book_black.png")
+        link(rel='stylesheet', href='/vendor/bootstrap.css')
+        link(rel='stylesheet', href='/vendor/bootstrap.responsive.min.css')
+        link(rel='stylesheet', href='/vendor/bootstrap.responsive.css')
+        link(rel='stylesheet', href='/css/style.css')
+    body
+        block content
